# cmd-model-smd

./: CMakeLists.txt  README.md  spring_mass_damper.cpp  spring_mass_damper.h
Config/: default_params.yaml
doc/: model_description.md
